fix sidebard z-index

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,7 @@
 @import 'profile';
 
 @import 'activity_chart';
+
+.no-z-index {
+    z-index: 0;
+}
